src/objects/ServiceItem__c.object
<CustomObject>
    <description>&quot;This is a &apos;charge&apos; item for a particular service provided to a Customer under a Contract 
(e.g. Water Volume, Fixed Charge, Sewage Volume)
The level at which Bill Items will be generated for. This has a link to the Service Item Type &quot;</description>
    <fields>
        <fullName>AvailableServiceItems__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Available Service Items</label>
        <referenceTo>AvailableServiceItem__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>ServiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date when the Customer gets stopped to be billed for the Service Item.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Used to describe how many of the Service Items (&quot;&quot;products&quot;&quot;) the customer has to pay for</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceItemType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to the defined Service Item type</description>
        <label>Service Item Type</label>
        <referenceTo>ServiceItemType__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>ServiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service Items</relationshipLabel>
        <relationshipName>ServiceItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date when the Customer gets started to be billed for the Service Item.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Service Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIN-{000000}</displayFormat>
        <label>Service Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ServiceItemStartDateMustbeBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date must be before End Date or End Date cannot be before Start Date.</description>
        <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be before End Date</errorMessage>
    </validationRules>
</CustomObject>